Git_WGBH_QC/src/objects/PB5_Fields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Kind__c</fullName>
        <label>Gift Kind</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Record_Type__c</fullName>
        <label>Giving Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>PB5 Required Fields</label>
</CustomObject>